<resources>
    <string name="app_name">SpaceX Rockets</string>

    <string name="fragment_rocket_list">Rockets</string>
    <string name="fragment_rocket_detail">Detail</string>
    <string name="fragment_rocket_launch">Launch</string>

    <string name="menu_item_launch">Launch</string>

    <string name="first_flight">First flight: %s</string>
    <string name="overview">Overview</string>
    <string name="dimension_meters">%dm</string>
    <string name="mass_tons">%dt</string>
    <string name="height">height</string>
    <string name="diameter">diameter</string>
    <string name="mass">mass</string>
    <string name="parameters">Parameters</string>
    <string name="first_stage">First Stage</string>
    <string name="second_stage">Second Stage</string>
    <string name="reusable">reusable</string>
    <string name="not_reusable">not reusable</string>
    <plurals name="engines_count">
        <item quantity="one">1 engine</item>
        <item quantity="other">%d engines</item>
    </plurals>
    <string name="engines_count">%d engines</string>
    <string name="tons_of_fuel">%.0f tons of fuel</string>
    <string name="seconds_burn_time">%d seconds burn time</string>
    <string name="launch_info_move_phone">Move your phone up\nto launch the rocket</string>
    <string name="launch_info_successful">Launch successful!</string>
    <string name="photos">Photos</string>
</resources>